# ONP

./: CMakeLists.txt  Example_input.txt  Readme.md
include/ONP/: Files.h  Helper_functions.h  ONP.h
src/: Files.cpp  Helper_functions.cpp  ONP.cpp  main.cpp
